--- a/working/index.css
+++ b/working/index.css
@@ -8,4 +8,42 @@
     width: 100%;
     height: 100vh;
     background-color: mediumpurple;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.calculator{
+    background-color: #252424;
+    padding: 20px;
+    border-radius: 10px;
+}
+.calculator form input{
+    border: 0;
+    outline: 0;
+    width: 80px;
+    height: 80px;
+    border-radius: 10px;
+    margin: 5px;
+    font-size: 20px;
+    background: black;
+    color: white;
+    box-shadow: -8px -8px 15px rgba(255,255,255,0.1),5px 5px 15px rgba(0,0,0,0.2);
+}
+
+form .display{
+    display: flex;
+    justify-content: flex-end;
+    margin: 20px 0;
+}
+
+form .display input{
+    text-align: right;
+    flex: 1;
+    font-size: 45px;
+    box-shadow: none;
+}
+form input.equal{
+    width: 175px;
+
 }
