--- a/working/index.css
+++ b/working/index.css
@@ -30,11 +30,17 @@
     color: white;
     box-shadow: -8px -8px 15px rgba(255,255,255,0.1),5px 5px 15px rgba(0,0,0,0.2);
 }
+.calculator form input:hover{
+    background-color: rgba(255, 255, 255, 0.27);
+    color: black;
+    box-shadow: -8px -8px 15px rgba(253, 244, 244, 0.1),5px 5px 15px rgba(0,0,0,0.2);
+}
 
 form .display{
     display: flex;
     justify-content: flex-end;
     margin: 20px 0;
+
 }
 
 form .display input{
@@ -42,6 +48,10 @@ form .display input{
     flex: 1;
     font-size: 45px;
     box-shadow: none;
+    background-color: white;
+    color: black;
+    padding-right: 10px;
+    border-radius: 5px;
 }
 form input.equal{
     width: 175px;
