--- a/working/index.css
+++ b/working/index.css
@@ -4,13 +4,37 @@
     font-family: "Poppins", sans-serif;
     box-sizing: border-box;
 }
+@keyframes colour {
+    0%{
+        background: linear-gradient(45deg, mediumpurple, lightpink, lightskyblue);
+
+    }
+    25%{
+        background: radial-gradient(circle, #4e28b7, #c4a2a5, #38a0e1);
+
+    }
+    50%{
+        background: radial-gradient(circle, #9d9d9d, #c7d743, #d21cde);
+
+    }
+    75%{
+        background: radial-gradient(circle, #9d9d9d, #c7d743, #58b68c);
+
+    }
+    100%{
+        background: radial-gradient(circle, #4bb22b, #60a3a6, #ce8fb0);
+
+    }
+
+}
 .container{
     width: 100%;
     height: 100vh;
-    background-color: mediumpurple;
+    background: radial-gradient(circle, #4e28b7, #c4a2a5, #38a0e1);
     display: flex;
     justify-content: center;
     align-items: center;
+    animation: colour 10s infinite;
 }
 
 .calculator{
